Added : Swagger for CreateNoteAPI
