# swagger/swagger.json
@@ -129,6 +129,50 @@
             }
         }
     },
+    "/createnotes": {
+        "post": {
+            "tags": [
+                "Create Notes"
+            ],
+            "description": "Create a  note !!",
+            "parameters": [
+                {
+                    "in": "header",
+                    "name": "Authorization",
+                    "description": "Token for vaidation",
+                    "schema": {
+                        "type": "string",
+                        "required": true
+                    }
+                },
+                {
+                    "name": "create note",
+                    "in": "body",
+                    "description": "Note's body",
+                    "schema": {
+                        "$ref": "#/definitions/notes"
+                    }
+                }
+            ],
+            "produces": [
+                "application/json"
+            ],
+            "schema": {
+                "$ref": "#/definitions/notes"
+            },
+            "responses": {
+                "201": {
+                    "description": "Create note succesfully !!"
+                },
+                "400": {
+                    "description": "Please enter Valid Token"
+                },
+                "500": {
+                    "description": "Internal server error"
+                }
+            }
+        }
+    },
     
 
     "definitions": {
@@ -175,13 +219,28 @@
                 "email": {
                     "type": "string"   
                 },
-                "newPassword":{
+                "password":{
                     "type":"string"
                 },
                 "code":{
                     "type":"string"
                 }
             }   
+        },
+        "notes": {
+            "type": "object",
+            "properties": {
+                "title": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                }
+            },
+            "example": {
+                "title": "Write a title here.....",
+                "description": "Write a description here....."
+            }
         }
     }
 }
